// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card: Component should render children when passed in 1`] = `
<div
  style={
    Object {
      "background-color": "#f0efef",
      "border-top": "2px solid #1d1d20",
      "color": "#1d1d20",
      "display": "flex",
      "flex-direction": "column",
      "padding": "12px 14px 14px",
    }
  }
>
  <div>
    <h1>
      Test
    </h1>
    <p>
      Content
    </p>
  </div>
</div>
`;

exports[`Card: Component should render correctly 1`] = `
<div
  style={
    Object {
      "background-color": "#f0efef",
      "border-top": "2px solid #1d1d20",
      "color": "#1d1d20",
      "display": "flex",
      "flex-direction": "column",
      "padding": "12px 14px 14px",
    }
  }
/>
`;

exports[`Card: Component should render header with custom styles 1`] = `
<div
  style={
    Object {
      "background-color": "#f0efef",
      "border-top": "2px solid #1d1d20",
      "color": "#1d1d20",
      "display": "flex",
      "flex-direction": "column",
      "padding": "12px 14px 14px",
    }
  }
>
  <div
    style={
      Object {
        "color": "#a6a7aa",
        "font-size": "12px",
        "margin-bottom": "14px",
      }
    }
  >
    <h1
      style="color: red"
    >
      header
    </h1>
  </div>
  <div>
    <p>
      Content
    </p>
  </div>
</div>
`;
